tests/regression/errors/basic/undefined_var_9.csd
// Undefined variable test 9
vibez.spill("Using undefined:", undefined_var_9)
sus result drip = missing_variable + 9
